--- a/force-app/main/default/classes/Test_VisitConfigurationRemote.cls
+++ b/force-app/main/default/classes/Test_VisitConfigurationRemote.cls
@@ -5,28 +5,23 @@ public with sharing class Test_VisitConfigurationRemote {
     public static void setup() {
         Visit_Plan__c visitPlan = new Visit_Plan__c(Name = 'Test 0');
         insert visitPlan;
-        Visit_Plan__c visitPlan2 = new Visit_Plan__c(Name = 'Test 1');
-        insert visitPlan2;
         Clinical_Trial_Profile__c singleCTP = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType());
         singleCTP.Visit_Plan__c = visitPlan.Id;
-        Visit__c visit1 = new Visit__c(Name = 'Test1', Visit_Plan__c = visitPlan.Id);
-        Visit__c visit2 = new Visit__c(Name = 'Test2', Visit_Plan__c = visitPlan.Id);
         insert new List<SObject>{
                 singleCTP,
-                visit1,
-                visit2
+                new Visit__c(Name = 'Test1', Visit_Plan__c = visitPlan.Id),
+                new Visit__c(Name = 'Test2', Visit_Plan__c = visitPlan.Id),
+                new Visit_Plan__c(Name = 'Test 1')
         };
     }
 
     @IsTest
     public static void getRelatedPlannedVisitsWithVisit_test() {
-
         List<Clinical_Trial_Profile__c> ctp = [SELECT Id, Visit_Plan__c FROM Clinical_Trial_Profile__c];
         List<Visit__c> visits2 = [SELECT Id, Visit_Plan__c FROM Visit__c];
         System.assertEquals(1, ctp.size());
 
         ClassFactory.clearStubTypesByClassNamesMap();
-
         ClassFactory.putStubTypeByClassName(CTPSelector.class, StubFactory.newInstance(CTPSelector.class)
                 .when('getCtpById')
                 .then(ctp)
@@ -67,7 +62,6 @@ public with sharing class Test_VisitConfigurationRemote {
 
     @IsTest
     public static void deleteVisit_test() {
-
         List<Visit__c> visits = [SELECT Id, Visit_Plan__c FROM Visit__c];
 
         Test.startTest();
@@ -84,11 +78,8 @@ public with sharing class Test_VisitConfigurationRemote {
 
         List<Clinical_Trial_Profile__c> ctp = [SELECT Id, Visit_Plan__c FROM Clinical_Trial_Profile__c];
         List<Visit_Plan__c> visitPlans = [SELECT Id FROM Visit_Plan__c WHERE Name = 'Test 1'];
-        System.debug(visitPlans);
-        System.debug(ctp);
-
         Test.startTest();
-        List<Visit__c> visits = VisitConfigurationRemote.updateCtp(visitPlans[0].Id, ctp[0].Id);
+        VisitConfigurationRemote.updateCtp(visitPlans[0].Id, ctp[0].Id);
         Test.stopTest();
 
         List<Clinical_Trial_Profile__c> newCTP = [SELECT Id, Visit_Plan__c FROM Clinical_Trial_Profile__c];
@@ -96,23 +87,13 @@ public with sharing class Test_VisitConfigurationRemote {
     }
 
     @IsTest
-    public static void getRelatedPlannedVisitsWithNullCTP_test() {
-
-        List<Clinical_Trial_Profile__c> ctp = null;
-        List<Visit__c> visits2 = [SELECT Id, Visit_Plan__c FROM Visit__c];
-
-        ClassFactory.clearStubTypesByClassNamesMap();
-
-        ClassFactory.putStubTypeByClassName(VisitConfigurationRemote.class, StubFactory.newInstance(VisitConfigurationRemote.class)
-                .when('getVisitsByCtpId')
-                .then(new AuraHandledException('Test Exception'))
-                .getInstance()
-        );
+    public static void updateCtpWithException_test() {
+        TriggerHandlerExecutor.bypassHandler(ClinicalTrialProfileTriggerHandler.class);
 
         Boolean isExceptionThrown = false;
         Test.startTest();
         try {
-            VisitConfigurationRemote.getRelatedPlannedVisits(ctp[0].Id);
+            VisitConfigurationRemote.updateCtp(null, null);
         } catch (Exception e) {
             isExceptionThrown = true;
         }
@@ -121,17 +102,25 @@ public with sharing class Test_VisitConfigurationRemote {
     }
 
     @IsTest
-    public static void deleteVisitsWithNullCTP_test() {
-
-        List<Clinical_Trial_Profile__c> ctp = null;
-//        List<Visit__c> visits2 = [SELECT Id, Visit_Plan__c FROM Visit__c];
-
-        ClassFactory.clearStubTypesByClassNamesMap();
+    public static void getRelatedPlannedVisitsWithException_test() {
 
         Boolean isExceptionThrown = false;
         Test.startTest();
         try {
-            VisitConfigurationRemote.deleteVisit(ctp[1].Id);
+            VisitConfigurationRemote.getRelatedPlannedVisits(null);
+        } catch (Exception e) {
+            isExceptionThrown = true;
+        }
+        Test.stopTest();
+        System.assert(true, isExceptionThrown);
+    }
+
+    @IsTest
+    public static void deleteVisitWithException_test() {
+        Boolean isExceptionThrown = false;
+        Test.startTest();
+        try {
+            VisitConfigurationRemote.deleteVisit(null);
         } catch (Exception e) {
             isExceptionThrown = true;
         }
